--- a/main.tex
+++ b/main.tex
@@ -34,11 +34,11 @@ This research presents my findings on detecting recaps, opening credits, bumpers
 \end{adjustwidth}
 This thesis aims to answer aforementioned research question. The rest of this section will be used to define the different type of video classes which this research is focused on. Section \ref{relatedwork} explains all of the related work. In section \ref{data} the data is presented. Section \ref{methodology} expands on the methodology and then the produced results are presented in section \ref{results}. Lastly, the results are discussed in section \ref{discussion}.
 
-\subsection{Segment classes}
-In this section we will give a background on the different types of segments to be detected.
+\subsection{Segment classes} \label{section:segmentclasses}
+In this section we will give a background on the different types of segments to be detected. What all the segment classes have in common is that they reappear (partially) in previous or future episodes. We will use this attribute for detection. 
 
 \subsubsection{Closing Credits}
-The closing credits at the end of a video contain a lot of scrolling text most of the time and there is little variation between the frames. In these texts everybody related to the production of the video is mentioned. In general the frames all have a black background with white text. But backgrounds can also vary as can be seen in figure \ref{fig:closingcredits}, therefore a solution that simply detects black and white would not suffice.
+The closing credits at the end of a video contain a lot of scrolling text most of the time and there is little variation between the frames. In these texts everybody related to the production of the video is mentioned. In general the frames all have a black background with white text. But backgrounds can also vary as can be seen in figure \ref{closingcredits}, therefore a solution that simply detects black and white would not suffice.
 
 \begin{figure}[H]
   \centering
@@ -55,14 +55,14 @@ The closing credits at the end of a video contain a lot of scrolling text most o
 	\includegraphics[width=\textwidth]{images/diffcredits2.png}
 \end{subfigure}
   \caption{Examples of varying types of closing credits}
-  \label{fig:closingcredits}
+  \label{closingcredits}
 \end{figure}
 
 \subsubsection{Opening credits}
-The opening credits of a TV-show are generally the same for at least all of the episodes in the same season. It opens the show with a theme song, presenting the most important actors at the start. If the sequence were known then it would be a rather simple problem to solve, by matching this sequence with all of the videos to locate the opening credits. The difficult part here is that they start somewhere at the start of a video, never right at the start. There is also no prior knowledge on how the opening credits of a show look like and they change every season.
+The opening credits of a TV-show are generally the same for all of the episodes in the same season. It opens the show with a theme song, presenting the most important actors at the start. If the sequence were known then it would be a rather simple problem to solve, by matching this sequence with all of the videos to locate the opening credits. The difficult part here is that they start somewhere at the start of a video, never right at the start. There is also no prior knowledge on how the opening credits of a show look like and they often change every season.
 
 \subsubsection{Recaps}
-A television show may contain recaps before the opening credits. If this is the case, then a binge watcher ideally wants to skip this part together with the opening credits. Not all material preceeding the opening credits is a recap though, sometimes it is original content. Classifying whether the video part before the opening credits consists of recaps is important for a fully automated solution.
+A television show may contain recaps before the opening credits. In the recaps content of previous episodes is repeated to refresh the viewer's memory. This is useful for linear TV when an episode is aired every week. A binge watcher ideally wants to skip the recaps together with the opening credits because they have seen the content recently. Not all material preceding the opening credits is a recap though, sometimes it is original content. Classifying whether the video part before the opening credits consists of recaps is important for a fully automated solution.
 
 \subsubsection{Bumpers}
 The bumper is a part of the video that eases a viewer into the upcoming commercial (see figure \ref{examplebumper}). Most of the times it has a voice over and text on screen saying: 'Next' (or the dutch translation of 'next') and some footage of what is to be expected after the commercial break is shown.
@@ -74,6 +74,9 @@ The bumper is a part of the video that eases a viewer into the upcoming commerci
     \label{examplebumper}
 \end{figure}
 
+\subsubsection{Preview}
+A preview is a segment at the end of an episode where an advance showing of fragments of the next episode(s) are played. Previews can typically be found in content that was created specially for broadcast TV. It gives the viewer a taste of what to expect in the next episode that will air a week later. However, this part is not of interest to a binge watcher.
+
 \subsection{Definitions and Techniques}
 This section will be used to elaborate on some topics mentioned in this thesis.
 
@@ -82,6 +85,22 @@ We define a season with multiple episodes of a TV-show as T.
 An episode within a season is defined as a set of frames.
 \[E = \{f_1, f_2, \dots, f_x\}\]
 
+
+\subsubsection{Image Retrieval}
+Image retrieval is a subset of the research field Information Retrieval (IR). Very generally speaking it investigates the problem where one has a query \textbf{q} expressing an information need and wants to find the best possible match for this \textbf{q} in a set of documents \textbf{D}.
+
+In the case of image retrieval the query consists of an image for which the best matching image should be found in a document set of images. There are two approaches for doing this.
+
+\begin{figure}[H]
+	\includegraphics[width=8cm]{images/imageretrieval.png}
+	\centering
+	\caption{Visual example of image retrieval.}
+	\label{fig:imageretrieval}
+\end{figure}
+
+\textbf{Text-based image retrieval} refers to retrieval of images based on textual metadata associated with these images. It matches images based on for instance their titles, keywords and more. The downside of this method is that if there is no metadata available then it needs to be added manually. With the growing sizes of image databases this can become quite inefficient, hence the more focus on content-based image retrieval in past years \cite{rajam2013survey}.
+
+\textbf{Content-based image retrieval} is retrieval based on the content of the image rather than the metadata as is the case with concept-based image retrieval. Computer vision is used to evaluate the image similarity, this can be done by looking at colors, shapes, textures and more. The advantage of content based image retrieval is that it does not rely on the metadata of images.
 
 \subsubsection{Color Histograms}
 A color histogram is a representation of the distribution of colors in an image. Color histograms are a flexible and low dimensional way of representing images. A color histogram can be computed by counting the number of pixels in a certain color range, the size of this range is variable, called the bin size. The higher the bin size, the lower the dimensions of the resulting histogram. See figure \ref{fig:colorhistogram} for an example color histogram where the bin size is 1, so each color is counted. 
@@ -137,7 +156,10 @@ With the unsupervised methods the authors typically do a dimensionality reductio
 %vergelijkbare dingen
 Abduraman et al.\ \cite{abduraman2011unsupervised} propose a system to detect repeated sequences in streams by performing a DCT operation on all of the frames in the stream and then use a micro clustering technique to detect repeated sequences. They were also able to link the trailers to their respective programs that occur at a later point in the stream.
 
-All of the previously mentioned works in this section never cover the specific topic of segmenting credits, recaps and bumpers. The methods yielded high accuracies in the range of 90\% - 95\% precision. This work aims for higher accuracies and thus will not be replicating most of the previously mentioned methodologies, however from the aforementioned papers we conclude that a large dimensionality reduction step will be necessary to process a large dataset of videos.
+All of the previously mentioned works in this section never cover the specific topic of segmenting the classes mentioned in section \ref{section:segmentclasses}. The methods yielded high accuracies in the range of 90\% - 95\% precision. This work aims for higher accuracies and thus will not be replicating most of the previously mentioned methodologies, however from the aforementioned papers we conclude that a large dimensionality reduction step will be necessary to efficiently process a large dataset of videos.
+
+Dimensionality reduction and efficient matching of large amounts of visual data is typically used within content based image retrieval, Zheng et al. give a very detailed summary of all the significant contributions from past years \cite{zheng2018sift}. Their summary covers three periods in image retrieval: Early methods, SIFT-based methods and CNN-based methods. Smeulders et al. present all the contributions of the early methods \cite{smeulders2000content}, these methods focused on looking at the color, texture and local geometry of images for retrieval. Not much later the Bag-of-words (BoW) model was proposed as a new method for image retrieval \cite{sivic2003video}. The advantage of this is that inverted indexes can be used for immediate retrieval of similar images. The BoW model paired with SIFT-descriptors \cite{lowe2004distinctive} as the feature vectors was used in image retrieval research for years \cite{nister2006scalable}\cite{philbin2007object}\cite{jegou2008hamming}\cite{jegou2010aggregating}\cite{jegou2012aggregating}. Since 2012 when the convolutional neural network was introduced \cite{krizhevsky2012imagenet} research switched to deep learning based methods for image retrieval \cite{babenko2014neural}]\cite{yue2015exploiting}\cite{tolias2015particular}.
+
 
 \iffalse
 %oude paper OCR op video
@@ -161,7 +183,7 @@ All of the previously mentioned works in this section never cover the specific t
 \fi
 
 
-\cite{zheng2018sift} Paper die alles omvat wbv image retrieval technieken.
+
 
 \section{Data} \label{data}
 
@@ -173,71 +195,7 @@ These files were then manually viewed and all the relevant segments were annotat
 
 \section{Methodology} \label{methodology}
 
-\subsection{Closing Credits}
-Because the closing credits consist of mostly text, the first approach tried utilized text detection. The hypothesis of this approach was that when in a large video sequence for each analyzed frame text is found, then this sequence is the closing credits sequence.
-
-Text detection was implemented by importing the open source OCR Tesseract package \cite{tesseract} in Python. Then the last 1/8 part of each video was analyzed by running text detection on multiples of the 24th frame. This was done because the videos were generally 24 frames per second and OCR is a costly computation. The hypothesis here was that by looking at one frame every second, the closing credits sequence could still be detected. The largest group of frames in sequence where Tesseract detected text in was classified as the closing credits.
-
-This approach proved to be successful as can be seen in section \ref{resultsclosingcredits}. However sometimes the OCR would detect text in quite clearly textless images, sometimes this resulted in false classification of closing cred  its while the particular video did not contain any closing credits at all. Because of this, another detection step was introduced. An image classifier was trained to classify whether an image belongs to closing credits or to the rest of the video. The classifier was trained on 416 images of closing credits and 1062 images of other parts of the videos. These images were randomly extracted from the video data set. This classifier got a 100\% accuracy on a held out validation set of 245 images. The classifier was then used to verify that the detected start frame of the video really are closing credits. If the start frame was classified as non-credits and the total detected sequence was less than 5 seconds long. The video would be classified as not having any closing credits.
-
-\subsection{Opening Credits}
-We classified opening credits segments by converting frames to color histograms and then inspect the similarity matrices of videos. This is under the assumption that the opening credits are equal.
-
-First, a color histogram for every frame is generated for every other x frames where $x \in \{3,6,12\}$. We do not compute a color histogram for every frame, the hypothesis for doing this is that it results in much faster processing times without losing accuracy, considering that increasing a similarity matrix its size increases the processing time quadratically. This results in a set of histograms H: 
-
-\[H = \{h_1, h_2, \dots, h_x\}\]. 
-
-Then we take $H_2$ and $H_x$ and compute the similarity matrix M, with the similarity defined as:
-
-\[S({a, b}) = \sum_{i = 1}^{n} |a_i - b_i| \]
-
-And from this similarity matrix we classify the part of a diagonal with the highest successive similarity as the opening credits. See figure \ref{simmatrix} for an example of such a diagonal with high similarity.
-
-\begin{figure}[H]
-	\includegraphics[width=10cm]{images/simmatrixarrow.jpg}
-	\centering
-	\caption{Plot of the similarity matrix of similarities between the color histograms of two episodes. The red arrow marks the location of the opening credits.}
-	\label{simmatrix}
-\end{figure}
-
-
-\subsection{Recaps}
-Early experimental results indicated that a solution based on recursively looking for similar frames in earlier episodes would not yield good results. We found that a feature based method to classify the segment before the opening credits as either recaps or non-recaps is an accurate method. 
-
-The features are: Average shot length, presence of continuous sound, ratio of the length relative to the full episode.
-
-\begin{figure}[H]
-	\centering
-	\begin{subfigure}[b]{0.4\textwidth}
-		\includegraphics[width=\textwidth]{images/shotlengths_recaps_true.png}
-	\end{subfigure}
-	\begin{subfigure}[b]{0.4\textwidth}
-		\includegraphics[width=\textwidth]{images/shotlengths_recaps_false.png}
-	\end{subfigure}
-	\caption{Bar plots of the shot lengths in frames. On the left is an episode with recaps. The episode on the right does not contain recaps. The bar in the other color marks the start of the opening credits.}
-	\label{fig:closingcredits}
-\end{figure}
-
-\begin{figure}[H]
-	\centering
-	\begin{subfigure}[b]{0.4\textwidth}
-		\includegraphics[width=\textwidth]{images/audio_recaps_true.png}
-	\end{subfigure}
-	\begin{subfigure}[b]{0.4\textwidth}
-		\includegraphics[width=\textwidth]{images/audio_recaps_false.png}
-	\end{subfigure}
-	\caption{Plots of the audio. On the left is an episode with recaps. The episode on the right does not contain recaps. The bar in the other color marks the start of the opening credits.}
-	\label{fig:closingcredits}
-\end{figure}
-
-\subsection{Bumpers}
-
 \section{Results} \label{results}
-
-\subsection{Closing Credits}\label{resultsclosingcredits}
-\subsection{Opening Credits}\label{resultsopeningcredits}
-\subsection{Recaps}\label{resultsrecaps}
-\subsection{Bumpers}\label{resultsbumpers}
 
 \section{Discussion} \label{discussion}
 
