--- a/references.bib
+++ b/references.bib
@@ -238,3 +238,125 @@
 	year={2018},
 	publisher={IEEE}
 }
+
+@article{rajam2013survey,
+	title={A survey on content based image retrieval},
+	author={Rajam, Felci and Valli, S},
+	journal={Life Science Journal},
+	volume={10},
+	number={2},
+	pages={2475--2487},
+	year={2013}
+}
+
+@article{smeulders2000content,
+	title={Content-based image retrieval at the end of the early years},
+	author={Smeulders, Arnold WM and Worring, Marcel and Santini, Simone and Gupta, Amarnath and Jain, Ramesh},
+	journal={IEEE Transactions on Pattern Analysis \& Machine Intelligence},
+	number={12},
+	pages={1349--1380},
+	year={2000},
+	publisher={IEEE}
+}
+
+@inproceedings{sivic2003video,
+	title={Video Google: A text retrieval approach to object matching in videos},
+	author={Sivic, Josef and Zisserman, Andrew},
+	booktitle={null},
+	pages={1470},
+	year={2003},
+	organization={IEEE}
+}
+
+@article{lowe2004distinctive,
+	title={Distinctive image features from scale-invariant keypoints},
+	author={Lowe, David G},
+	journal={International journal of computer vision},
+	volume={60},
+	number={2},
+	pages={91--110},
+	year={2004},
+	publisher={Springer}
+}
+
+@inproceedings{philbin2007object,
+	title={Object retrieval with large vocabularies and fast spatial matching},
+	author={Philbin, James and Chum, Ondrej and Isard, Michael and Sivic, Josef and Zisserman, Andrew},
+	booktitle={2007 IEEE conference on computer vision and pattern recognition},
+	pages={1--8},
+	year={2007},
+	organization={IEEE}
+}
+
+@inproceedings{jegou2008hamming,
+	title={Hamming embedding and weak geometric consistency for large scale image search},
+	author={Jegou, Herve and Douze, Matthijs and Schmid, Cordelia},
+	booktitle={European conference on computer vision},
+	pages={304--317},
+	year={2008},
+	organization={Springer}
+}
+
+@article{jegou2012aggregating,
+	title={Aggregating local image descriptors into compact codes},
+	author={Jegou, Herve and Perronnin, Florent and Douze, Matthijs and S{\'a}nchez, Jorge and Perez, Patrick and Schmid, Cordelia},
+	journal={IEEE transactions on pattern analysis and machine intelligence},
+	volume={34},
+	number={9},
+	pages={1704--1716},
+	year={2012},
+	publisher={IEEE}
+}
+
+@inproceedings{nister2006scalable,
+	title={Scalable recognition with a vocabulary tree},
+	author={Nister, David and Stewenius, Henrik},
+	booktitle={2006 IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR'06)},
+	volume={2},
+	pages={2161--2168},
+	year={2006},
+	organization={Ieee}
+}
+
+@inproceedings{jegou2010aggregating,
+	title={Aggregating local descriptors into a compact image representation},
+	author={J{\'e}gou, Herv{\'e} and Douze, Matthijs and Schmid, Cordelia and P{\'e}rez, Patrick},
+	booktitle={CVPR 2010-23rd IEEE Conference on Computer Vision \& Pattern Recognition},
+	pages={3304--3311},
+	year={2010},
+	organization={IEEE Computer Society}
+}
+
+@inproceedings{krizhevsky2012imagenet,
+	title={Imagenet classification with deep convolutional neural networks},
+	author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+	booktitle={Advances in neural information processing systems},
+	pages={1097--1105},
+	year={2012}
+}
+
+@inproceedings{babenko2014neural,
+	title={Neural codes for image retrieval},
+	author={Babenko, Artem and Slesarev, Anton and Chigorin, Alexandr and Lempitsky, Victor},
+	booktitle={European conference on computer vision},
+	pages={584--599},
+	year={2014},
+	organization={Springer}
+}
+
+@inproceedings{yue2015exploiting,
+	title={Exploiting local features from deep networks for image retrieval},
+	author={Yue-Hei Ng, Joe and Yang, Fan and Davis, Larry S},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition workshops},
+	pages={53--61},
+	year={2015}
+}
+
+@article{tolias2015particular,
+	title={Particular object retrieval with integral max-pooling of CNN activations},
+	author={Tolias, Giorgos and Sicre, Ronan and J{\'e}gou, Herv{\'e}},
+	journal={arXiv preprint arXiv:1511.05879},
+	year={2015}
+}
+
+
