--- a/references.bib
+++ b/references.bib
@@ -40,6 +40,11 @@
   howpublished = {\url{https://medium.com/netflix-techblog/extracting-contextual-information-from-video-assets-ee9da25b6008}}
 }
 
+@misc{Faiss,
+	title = {Faiss - Facebook Research},
+	howpublished = {\url{https://github.com/facebookresearch/faiss}}
+}
+
 @article{berrani2008non,
   title={A non-supervised approach for repeated sequence detection in TV broadcast streams},
   author={Berrani, Sid-Ahmed and Manson, Ga{\"e}l and Lechat, Patrick},
@@ -357,6 +362,13 @@
 	author={Tolias, Giorgos and Sicre, Ronan and J{\'e}gou, Herv{\'e}},
 	journal={arXiv preprint arXiv:1511.05879},
 	year={2015}
+}
+
+@article{faiss,
+	title={Billion-scale similarity search with GPUs},
+	author={Johnson, Jeff and Douze, Matthijs and J{\'e}gou, Herv{\'e}},
+	journal={arXiv preprint arXiv:1702.08734},
+	year={2017}
 }
 
 
