Versie met person feature vectors

--- a/references.bib
+++ b/references.bib
@@ -40,11 +40,6 @@
   howpublished = {\url{https://medium.com/netflix-techblog/extracting-contextual-information-from-video-assets-ee9da25b6008}}
 }
 
-@misc{Faiss,
-	title = {Faiss - Facebook Research},
-	howpublished = {\url{https://github.com/facebookresearch/faiss}}
-}
-
 @article{berrani2008non,
   title={A non-supervised approach for repeated sequence detection in TV broadcast streams},
   author={Berrani, Sid-Ahmed and Manson, Ga{\"e}l and Lechat, Patrick},
@@ -371,4 +366,42 @@
 	year={2017}
 }
 
+@misc{ffmpeg,
+	title = {FFmpeg},
+	howpublished = {\url{http://ffmpeg.org}}
+}
 
+@misc{faiss-github,
+	title = {Faiss - Facebook Research},
+	howpublished = {\url{https://github.com/facebookresearch/faiss}}
+}
+
+@inproceedings{yu2002color,
+	title={Color texture moments for content-based image retrieval},
+	author={Yu, Hui and Li, Mingjing and Zhang, Hong-Jiang and Feng, Jufu},
+	booktitle={Proceedings. International Conference on Image Processing},
+	volume={3},
+	pages={929--932},
+	year={2002},
+	organization={IEEE}
+}
+
+@article{manjunath1996texture,
+	title={Texture features for browsing and retrieval of image data},
+	author={Manjunath, Bangalore S and Ma, Wei-Ying},
+	journal={IEEE Transactions on pattern analysis and machine intelligence},
+	volume={18},
+	number={8},
+	pages={837--842},
+	year={1996},
+	publisher={IEEE}
+}
+
+@inproceedings{beyer1999nearest,
+	title={When is “nearest neighbor” meaningful?},
+	author={Beyer, Kevin and Goldstein, Jonathan and Ramakrishnan, Raghu and Shaft, Uri},
+	booktitle={International conference on database theory},
+	pages={217--235},
+	year={1999},
+	organization={Springer}
+}
