Progress on adding results

--- a/references.bib
+++ b/references.bib
@@ -229,7 +229,7 @@
 }
 
 @article{zheng2018sift,
-	title={SIFT meets CNN: A decade survey of instance retrieval},
+	title={{SIFT} meets {CNN}: A decade survey of instance retrieval},
 	author={Zheng, Liang and Yang, Yi and Tian, Qi},
 	journal={IEEE transactions on pattern analysis and machine intelligence},
 	volume={40},
@@ -360,19 +360,19 @@
 }
 
 @article{faiss,
-	title={Billion-scale similarity search with GPUs},
+	title={Billion-scale similarity search with {GPU}s},
 	author={Johnson, Jeff and Douze, Matthijs and J{\'e}gou, Herv{\'e}},
 	journal={arXiv preprint arXiv:1702.08734},
 	year={2017}
 }
 
 @misc{ffmpeg,
-	title = {FFmpeg},
+	title = {{FF}mpeg},
 	howpublished = {\url{http://ffmpeg.org}}
 }
 
 @misc{faiss-github,
-	title = {Faiss - Facebook Research},
+	title = {Faiss, A library for efficient similarity search and clustering of dense vectors - Facebook Research},
 	howpublished = {\url{https://github.com/facebookresearch/faiss}}
 }
 
@@ -404,4 +404,14 @@
 	pages={217--235},
 	year={1999},
 	organization={Springer}
+}
+
+@inproceedings{yu2002colortexturemoments,
+	title={Color texture moments for content-based image retrieval},
+	author={Yu, Hui and Li, Mingjing and Zhang, Hong-Jiang and Feng, Jufu},
+	booktitle={Proceedings. International Conference on Image Processing},
+	volume={3},
+	pages={929--932},
+	year={2002},
+	organization={IEEE}
 }
